# CPE471_Win32

./: README.md
Install_Libs_Win32/: Install - Click Me.lnk  configandmovefiles.bat  installmodules.cmake
Install_Libs_Win32/glad/lib/: glad.lib
Install_Libs_Win32/rpavlik/: CreateLaunchers.cmake
Lab6_Win32/: CMakeLists.txt  sources.txt
Lab6_Win32/source/: main.cpp
Lab6_Win32_Michael/: Make - Click Me.bat
Lab6_Win32_Michael/Src/: CMakeLists.txt
